--- a/magiccompt.css
+++ b/magiccompt.css
@@ -1,8 +1,8 @@
+
 html, body {
 	
 	margin: 0;
 	padding: 0;
-	background-color: rgb(24,24,24);
 }
 
 .container{
@@ -12,12 +12,13 @@ html, body {
 	padding:0;
 }
 
-.header{
+header{
 
+	padding:20px;
 	background-color:#333333;
 }
 
-.nav{
+nav{
 
 	text-align: left;
 	margin:0;
@@ -25,24 +26,28 @@ html, body {
 	
 }
 
-.nav a{
+nav a{
 
 	padding:10px;
 	text-transform: uppercase;
 	text-decoration:  none;
 	color:#fff;
-	
-
-}
-
-.nav li{
-
-	display:inline-block;	
 	font-family:'Raleway', sans-serif;
 	font-weight: 600;
   	font-size: 12px;
 
 }
+
+nav a:hover{
+
+	padding:10px;
+	text-transform: uppercase;
+	text-decoration:  none;
+	color:yellow;
+	
+
+}
+
 
 .jumbotron {
 
@@ -85,6 +90,7 @@ html, body {
 	text-align: center;
 	padding:0;
 	margin:0;
+	background-color: #111314;
 }
 
 .col{	
